// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> render the button 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#313d48",
        "borderRadius": 6,
        "justifyContent": "center",
        "minHeight": 60,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      selectable={true}
      style={
        Array [
          Object {
            "color": "#cbd2d6",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 18,
            "lineHeight": 24,
            "textAlign": "auto",
          },
          Array [
            Object {
              "color": "#fff",
              "textAlign": "center",
            },
            Object {},
          ],
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;

exports[`<Button/> render the button with an icon 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#313d48",
        "borderRadius": 6,
        "justifyContent": "center",
        "minHeight": 60,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <View>
        <Text>
          Icon
        </Text>
      </View>
    </View>
    <Text
      selectable={true}
      style={
        Array [
          Object {
            "color": "#cbd2d6",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 18,
            "lineHeight": 24,
            "textAlign": "auto",
          },
          Array [
            Object {
              "color": "#fff",
              "textAlign": "center",
            },
            Object {},
          ],
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;

exports[`<Button/> render the button with style 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#313d48",
        "borderRadius": 6,
        "justifyContent": "center",
        "minHeight": 60,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      Object {
        "backgroundColor": "black",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      selectable={true}
      style={
        Array [
          Object {
            "color": "#cbd2d6",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 18,
            "lineHeight": 24,
            "textAlign": "auto",
          },
          Array [
            Object {
              "color": "#fff",
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "black",
            },
          ],
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;
